04_helm/manifests/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-app
  labels:
    app: user-app
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-app
                port:
                  number: 8080
